# CoverTree

./: .gitignore  CLAUDE.md  CMAKE_BUILD.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  OPENAI_EMBEDDINGS.md  PROGRESS.md  PYBIND11_MIGRATION.md  QUICKSTART.md  STRATEGY_SUMMARY.md  TODO.md  UV_WORKFLOW.md  build.sh  covertree_config.py  covertree_config.py.in  pyproject.toml  sample_events.py  sample_text_items.py  setup.py  test_clustering.py  test_ensemble.py  test_modern.py  test_pybind11.py  test_sanity.py  test_slice_n_dice_2.py  test_text_input.py
covertree/: __init__.py  covertree.py  modern.py
src/cover_tree/: cover_tree.cpp  cover_tree.h  covertree_pybind.cpp  covertreecmodule.cxx
src/sg_tree/: cover_tree.h  sgtree.cpp
