[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.13.1", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "covertree"
version = "1.0.0"
description = "Cover Tree and SG-Tree for fast nearest neighbor search and hierarchical clustering"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Manzil Zaheer"},
]
keywords = ["nearest-neighbor", "cover-tree", "clustering", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.13.1",
    "scipy>=0.17",
    "scikit-learn>=0.18.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7.0",
    "pandas>=1.3.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/manzilzaheer/CoverTree"
Documentation = "https://github.com/manzilzaheer/CoverTree/blob/master/README.md"
Repository = "https://github.com/manzilzaheer/CoverTree"

[tool.setuptools]
packages = ["covertree"]

[tool.setuptools.package-data]
covertree = ["py.typed"]

# UV-specific settings (using new dependency-groups format)
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ipython>=8.0",
    "ipdb>=0.13",
]

# Ruff linting configuration
[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Black formatting configuration
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# MyPy type checking configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=covertree",
    "--cov-report=term-missing",
    "--cov-report=html",
]
